--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 [dependencies]
 bevy = "0.7"
 # TODO(@justint): check windows compatibility
-bevy_egui = "0.14"
+bevy_egui = "0.14" # bevy 0.7 compatible
+bevy-inspector-egui = "0.11" # bevy 0.7 compatible
 
 [dependencies.iyes_loopless]
 git = "https://github.com/IyesGames/iyes_loopless"
