--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ opt-level = 3
 bevy = "0.7"
 bevy_egui = "0.14" # bevy 0.7 compatible
 bevy-inspector-egui = "0.11" # bevy 0.7 compatible
+serde = { version = "1.0", features = ["derive"] } # for map asset loader
+anyhow = "1.0.4" # for asset loader errors
+serde_yaml = "0.8" # map asset file format
 
 [dependencies.iyes_loopless]
 git = "https://github.com/IyesGames/iyes_loopless"
